feat: /admin/seed
